--- a/JavaMiniProject/.classpath
+++ b/JavaMiniProject/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="player.jar">
+	<classpathentry kind="lib" path="player.jar" sourcepath="player.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
