--- a/JavaMiniProject/.classpath
+++ b/JavaMiniProject/.classpath
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/USER/git/repository3/JavaMiniProject/player.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/11.2.0/server/jdbc/lib/ojdbc6.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/user/Desktop/player.jar">
-=======
-	<classpathentry kind="lib" path="player.jar" sourcepath="player.jar">
->>>>>>> branch 'master' of https://github.com/2023-SMHRD-KDT-BigData-21/Kim-donghyun2.git
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
